# cg2

./: .gitmodules  CMakeLists.txt  README.md
CMake/Templates/: debug.sh.in  launch.json.in  run.sh.in
data/Implicits/: box.isd  cylinder.isd  difference.isd  distance_surface.isd  intersection.isd  sphere.isd  union.isd
data/Pinocchio/Result/: attachment.out  skeleton.out
exercise1/: CG2_exercise1.pj  CG2_exercise1.sh.in  CMakeLists.txt  cgv_demo.cxx  config.def  cubes_drawable.cxx
exercise2/: CG2_exercise2.pj  CG2_exercise2.sh.in  CMakeLists.txt  box.cxx  config.def  csg.cxx  cylinder.cxx  distance_surface.cxx  gl_implicit_surface_drawable.cxx  implicit_base.h  implicit_group.cxx  scene.cxx  skeleton.cxx  sphere.cxx  transform.cxx
exercise45/: Animation.cxx  AtomicTransform.h  Bone.cxx  Bone.h  CG2_exercise45.pj  CG2_exercise45.sh.in  CMakeLists.txt  Init.cxx  Mesh.cxx  Skeleton.cxx  Skeleton.h  SkeletonViewer.cxx  SkeletonViewer.h  config.def  skinning.glvs
